improved dataexchange and data handling, added voltage, small fixes

--- a/src/pages/device/device.html
+++ b/src/pages/device/device.html
@@ -157,6 +157,12 @@
             </button>
         </ion-item>
     </ion-list>
+    <ion-list>
+        <ion-label stacked>
+            <h4 style="padding-top: 5px;">Tracker battery voltage</h4>
+        </ion-label>
+        <div>{{configData.voltage | number:'2.1-1'}} Volt</div>
+    </ion-list>
 
     <ion-list>
         <h2>Fast RSSI monitor</h2>
