disable battery voltage from ui because of reliability issues on hardware level

--- a/src/pages/device/device.html
+++ b/src/pages/device/device.html
@@ -200,7 +200,7 @@
         </ion-item>
     </ion-list>
     <ion-list>
-        <div>Tracker battery voltage: {{configData.voltage | number:'2.1-1'}} Volt</div>
+        <!-- <div>Tracker battery voltage: {{configData.voltage | number:'2.1-1'}} Volt</div> //-->
         <div>Uptime: {{configData.uptime}} seconds</div>
     </ion-list>
 
