--- a/src/pages/device/device.html
+++ b/src/pages/device/device.html
@@ -224,7 +224,7 @@
         </ion-item>
     </ion-list>
     <ion-list>
-        <div>Tracker battery voltage: {{configData.voltage | number:'2.1-1'}} Volt</div>
+        <div>Tracker battery voltage: {{configData.voltage | number:'2.1-1'}} Volt (Cells: {{configData.voltage / cells | number:'1.1-1'}} Volt)</div>
         <div>Uptime: {{configData.uptime}} seconds</div>
 
         <ion-item text-wrap>
