made triggervalue changeable

--- a/src/pages/device/device.html
+++ b/src/pages/device/device.html
@@ -140,7 +140,7 @@
                 <h3 style="padding-top: 5px;">Current trigger value</h3>
                 <div>The RSSI value that triggers a new lap detection.</div>
             </ion-label>
-            <ion-input type="text" disabled value="" [(ngModel)]="deviceData.triggerValue"></ion-input>
+            <ion-input type="text" value="" [(ngModel)]="deviceData.triggerValue"></ion-input>
         </ion-item>
 
         <ion-item text-wrap>
